--- a/Medana.Web/Pages/Index.cshtml
+++ b/Medana.Web/Pages/Index.cshtml
@@ -1,5 +1,4 @@
 ﻿@page
-@using Medana.API.Entities;
 @model IndexModel
 @{
     ViewData["Title"] = "Medana";
@@ -12,17 +11,15 @@ var patients = Model.Patients;
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Patients List</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <title><b>Patients List</b></title>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
 
     <div class="container mt-5">
-        <h2>Patients List</h2>
-        <table class="table table-bordered" border="1">
-            <thead class="thead-dark">
+        <h2><b>Patients List</b></h2>
+            <table class="table table-bordered table-hover table-responsive-xl centered-table" border="1">
+                <thead class="table-light">
                 <tr>
                     <th>ID</th>
                     <th>First Name</th>
@@ -43,11 +40,11 @@ var patients = Model.Patients;
                     <th>Insurance Provider</th>
                     <th>Insurance Policy Number</th>
                 </tr>
-            </thead>
-            <tbody class="table-hover">
+                </thead>
+                <tbody class="table-hover">
                 @foreach (var patient in patients)
-            {
-                <tr>
+                {
+                    <tr>
                         <td>@patient.Id</td>
                         <td>@patient.PersonalInformation.FirstName</td>
                         <td>@patient.PersonalInformation.LastName</td>
@@ -61,9 +58,9 @@ var patients = Model.Patients;
                         <td>@string.Join(", ", patient.MedicalHistory.MedicalConditions)</td>
                         <td>
                             @foreach (var medication in patient.MedicalHistory.MedicationAndDosages)
-                        {
-                            <div>@medication.MedicationName - @medication.Dosage - @medication.Frequency</div>
-                        }
+                            {
+                                <div>@medication.MedicationName - @medication.Dosage - @medication.Frequency</div>
+                            }
                         </td>
                         <td>@string.Join(", ", patient.MedicalHistory.Allergies)</td>
                         <td>@string.Join(", ", patient.MedicalHistory.SurgicalHistory)</td>
@@ -72,10 +69,12 @@ var patients = Model.Patients;
                         <td>@patient.InsuranceInformation.InsuranceProvider</td>
                         <td>@patient.InsuranceInformation.InsurancePolicyNumber</td>
                     </tr>
-            }
-            </tbody>
-        </table>
-    </div>
+                }
+                </tbody>
+            </table>
+        </div>
+
+    
 
 </body>
 </html>
