--- a/Medana.Web/Pages/Index.cshtml
+++ b/Medana.Web/Pages/Index.cshtml
@@ -21,53 +21,26 @@ var patients = Model.Patients;
             <table class="table table-bordered table-hover table-responsive-xl centered-table" border="1">
                 <thead class="table-light">
                 <tr>
-                    <th>ID</th>
+                    <th>CNP</th>
                     <th>First Name</th>
                     <th>Last Name</th>
                     <th>Date of Birth</th>
                     <th>Sex</th>
                     <th>Address</th>
-                    <th>CNP</th>
                     <th>Phone Number</th>
-                    <th>Occupation</th>
-                    <th>Email</th>
-                    <th>Medical Conditions</th>
-                    <th>Medication</th>
-                    <th>Allergies</th>
-                    <th>Surgical History</th>
-                    <th>Immunization History</th>
-                    <th>Family Medical History</th>
-                    <th>Insurance Provider</th>
-                    <th>Insurance Policy Number</th>
                 </tr>
                 </thead>
                 <tbody class="table-hover">
                 @foreach (var patient in patients)
                 {
                     <tr>
-                        <td>@patient.Id</td>
+                        <td>@patient.CNP</td>
                         <td>@patient.PersonalInformation.FirstName</td>
                         <td>@patient.PersonalInformation.LastName</td>
                         <td>@patient.PersonalInformation.DateOfBirth.ToString("yyyy-MM-dd")</td>
                         <td>@patient.PersonalInformation.Sex</td>
                         <td>@patient.PersonalInformation.Address</td>
-                        <td>@patient.PersonalInformation.CNP</td>
                         <td>@patient.PersonalInformation.PhoneNumber</td>
-                        <td>@patient.PersonalInformation.Occupation</td>
-                        <td>@patient.PersonalInformation.Email</td>
-                        <td>@string.Join(", ", patient.MedicalHistory.MedicalConditions)</td>
-                        <td>
-                            @foreach (var medication in patient.MedicalHistory.MedicationAndDosages)
-                            {
-                                <div>@medication.MedicationName - @medication.Dosage - @medication.Frequency</div>
-                            }
-                        </td>
-                        <td>@string.Join(", ", patient.MedicalHistory.Allergies)</td>
-                        <td>@string.Join(", ", patient.MedicalHistory.SurgicalHistory)</td>
-                        <td>@string.Join(", ", patient.MedicalHistory.ImmunizationHistory)</td>
-                        <td>@patient.MedicalHistory.FamilyMedicalHistory</td>
-                        <td>@patient.InsuranceInformation.InsuranceProvider</td>
-                        <td>@patient.InsuranceInformation.InsurancePolicyNumber</td>
                     </tr>
                 }
                 </tbody>
