--- a/Medana.Web/Pages/AddPatient.cshtml
+++ b/Medana.Web/Pages/AddPatient.cshtml
@@ -3,6 +3,7 @@
 
 @{
     ViewData["Title"] = "Add New Patient";
+var ErrorMessage = Model.ErrorMessage;
 }
 
 <!DOCTYPE html>
@@ -17,6 +18,13 @@
 <div class="container mt-5">
         <h2><b>@ViewData["Title"]</b></h2>
     <div class="mt-5">
+
+            @if (!string.IsNullOrEmpty(ErrorMessage))
+        {
+            <div class="alert alert-danger" role="alert">
+                    @ErrorMessage
+                </div>
+        }
 
         <form method="post">
             <div class="row">
@@ -36,11 +44,6 @@
                         <label for="DateOfBirth">Date of Birth:</label>
                         <input asp-for="PatientDTO.PersonalInformation.DateOfBirth" class="form-control"/>
                         <span asp-validation-for="PatientDTO.PersonalInformation.DateOfBirth" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label for="Age">Age:</label>
-                        <input asp-for="PatientDTO.PersonalInformation.Age" class="form-control"/>
-                        <span asp-validation-for="PatientDTO.PersonalInformation.Age" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <label for="Sex">Sex:</label>
@@ -106,8 +109,23 @@
                         <span asp-validation-for="PatientDTO.MedicalHistory.FamilyMedicalHistory" class="text-danger"></span>
                     </div>
                 </div>
-
             </div>
+            <div class="row">
+                    <h4>Insurance Information</h4>
+                    <div class="form-group">
+                        <label for="InsuranceProvider">Insurance Provider:</label>
+                        <textarea asp-for="PatientDTO.InsuranceInformation.InsuranceProvider" class="form-control"></textarea>
+                        <span asp-validation-for="PatientDTO.InsuranceInformation.InsuranceProvider" class="text-danger"></span>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="InsurancePolicyNumber">Insurance Policy Number:</label>
+                        <textarea asp-for="PatientDTO.InsuranceInformation.InsurancePolicyNumber" class="form-control"></textarea>
+                        <span asp-validation-for="PatientDTO.InsuranceInformation.InsurancePolicyNumber" class="text-danger"></span>
+                    </div>
+            </div>
+
+            <div class="mt-2" asp-validation-summary="All" class="text-danger"></div>
 
             <button type="submit" class="btn btn-primary mt-5">Submit</button>
         </form>
