--- a/Medana.Web/Pages/Shared/_Layout.cshtml
+++ b/Medana.Web/Pages/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/AddPatient">AddPatient</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/">Privacy</a>
                         </li>
                     </ul>
                 </div>
