--- a/Medana.Web/Pages/AddPatient.cshtml
+++ b/Medana.Web/Pages/AddPatient.cshtml
@@ -23,7 +23,7 @@ var ErrorMessage = Model.ErrorMessage;
         {
             <div class="alert alert-danger" role="alert">
                     @ErrorMessage
-                </div>
+            </div>
         }
 
         <form method="post">
@@ -47,7 +47,10 @@ var ErrorMessage = Model.ErrorMessage;
                     </div>
                     <div class="form-group">
                         <label for="Sex">Sex:</label>
-                        <input asp-for="PatientDTO.PersonalInformation.Sex" class="form-control"/>
+                        <select asp-for="PatientDTO.PersonalInformation.Sex" class="form-control">
+                            <option value="Male">Male</option>
+                            <option value="Female">Female</option>
+                        </select>
                         <span asp-validation-for="PatientDTO.PersonalInformation.Sex" class="text-danger"></span>
                     </div>
                     <div class="form-group">
@@ -125,7 +128,7 @@ var ErrorMessage = Model.ErrorMessage;
                     </div>
             </div>
 
-            <div class="mt-2" asp-validation-summary="All" class="text-danger"></div>
+            <div class="mt-2 text-danger" asp-validation-summary="All"></div>
 
             <button type="submit" class="btn btn-primary mt-5">Submit</button>
         </form>
