perfected medical record download and getting the birthdate from CNP

--- a/Medana.Web/Pages/PatientDetails.cshtml
+++ b/Medana.Web/Pages/PatientDetails.cshtml
@@ -3,7 +3,7 @@
 @model Medana.Web.Pages.PatientDetailsModel
 
 @{
-    ViewData["Title"] = "Patient Details";
+    ViewData["Title"] = "Full Medical Record";
 PatientDTO patient = Model.Patient;
 }
 
