--- a/Medana.Web/Pages/AddConsultation.cshtml
+++ b/Medana.Web/Pages/AddConsultation.cshtml
@@ -18,12 +18,12 @@
     <div class="container mt-5">
         <h2><b>@ViewData["Title"]</b></h2>
         <div class="mt-5">
-            @if (!string.IsNullOrEmpty(ErrorMessage))
+@*             @if (!string.IsNullOrEmpty(ErrorMessage))
             {
                 <div class="alert alert-danger" role="alert">
                     @ErrorMessage
                 </div>
-            }
+            } *@
             <form method="post">
                 <div class="form-group">
                     <label for="PatientCNP">CNP:</label>
