--- a/Medana.Web/wwwroot/css/site.css
+++ b/Medana.Web/wwwroot/css/site.css
@@ -1,5 +1,5 @@
 /*global palette
-    #f2f7f3 - mint cream
+    c3dac7 - mint cream
     9ac2c9 - light blue
     627e93- slate gray
     ffffff - white
@@ -32,7 +32,7 @@ body {
 
 /*bg color*/
 .bg-color-mint-cream {
-    background-color: #f2f7f3;
+    background-color: #c3dac7;
 }
 
 .centered-table {
