--- a/Medana.Web/Pages/Shared/_Layout.cshtml
+++ b/Medana.Web/Pages/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/AddConsultation">Add New Consultation</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Reports"> Medical Reports</a>
+                        </li>
                     </ul>
                 </div>
             </div>
